--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Facturas/VisualizarFacturas.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Facturas/VisualizarFacturas.cshtml
@@ -23,6 +23,7 @@
                     <th>Fecha de Emisión</th>
                     <th>Monto Total</th>
                     <th>Descripción</th>
+                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody>
@@ -35,6 +36,9 @@
                         <td>@factura.FechaEmision.ToShortDateString()</td>
                         <td>@factura.MontoTotal</td>
                         <td>@factura.Descripcion</td>
+                        <td>
+                            <a asp-action="EditarFactura" asp-route-id="@factura.IdFactura" class="btn btn-warning btn-sm">Editar</a>
+                        </td>
                     </tr>
                 }
             </tbody>
