--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/CrearProyecto.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/CrearProyecto.cshtml
@@ -12,7 +12,9 @@
     </div>
 }
 
-<h2>Crear Proyecto</h2>
+<!-- Sección: Encabezado del Proyecto -->
+<h2 class="section-title">Crear Proyecto</h2>
+
 
 <form asp-action="CrearProyecto" method="post">
     <div class="mb-3">
