--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/AsignarCliente.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/AsignarCliente.cshtml
@@ -4,8 +4,6 @@
     Layout = "~/Views/Proyecto/MenuProyecto.cshtml";
 }
 
-<h2>Asignar Cliente</h2>
-
 @if (TempData["MensajeError"] != null)
 {
     <div class="alert alert-danger text-center mt-3" role="alert">
@@ -13,6 +11,10 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 }
+
+<!-- Sección: Encabezado del Proyecto -->
+<h2 class="section-title">Asignar Cliente</h2>
+
 
 <form asp-action="AsignarCliente" method="post">
     <input type="hidden" name="id" value="@ViewBag.ProyectoId" />
