--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
@@ -35,7 +35,7 @@
     </nav>
 
     <!-- Main content -->
-    <div class="main-content">
+    <div class="main-content2">
         @RenderBody()
     </div>
 </div>
