--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -63,21 +63,6 @@
                             </li>
                         }
 
-                        @if (User.IsInRole("Empleado"))
-                        {
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Módulo Empleado
-                                </a>
-
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Empleado 01</a></li>
-                                    <li><a class="dropdown-item" href="#">Empleado 02</a></li>
-                                    <li><a class="dropdown-item" href="#">Empleado 03</a></li>
-                                </ul>
-                            </li>
-                        }
-
                         @if (User.IsInRole("Usuario"))
                         {
                             <li class="nav-item">
@@ -116,8 +101,7 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
                                     <li><a class="dropdown-item" asp-controller="Acceso" asp-action="VerPerfil">Ver Perfil</a></li>
-                                    <li><a class="dropdown-item" href="#">Configuración</a></li>
-                                    <li><a class="dropdown-item" asp-controller="Acceso" asp-action="ActivarTwoFA">Autenticación de 2 Factores</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Acceso" asp-action="ActivarTwoFA">Autenticación en 2 pasos</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" asp-controller="Acceso" asp-action="CerrarSesion">Cerrar sesión</a></li>
                                 </ul>
