--- a/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/Menu.css
+++ b/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/Menu.css
@@ -49,8 +49,9 @@
     margin-top: 0.5rem;
 }
 
-.main-content {
-    flex-grow: 1; 
+.main-content2 {
+    flex-grow: 1;
     margin-left: 20px;
     margin-right: 20px;
+    margin-top: 50px;
 }
