--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
     <title>SGIO - Layout</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="~/css/styles.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css" rel="stylesheet" />
+    <link href="~/css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -16,7 +16,10 @@
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: #0056B3;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Logo</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                    <img src="~/img/logo.jpg" alt="Logo" style="height: 75px; width: auto;" />
+                </a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -36,13 +39,13 @@
                                 </a>
 
                                 <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" asp-controller="Proyecto" asp-action="Proyectos">Proyectos</a></li>
                                     <li><a class="dropdown-item" asp-controller="Facturas" asp-action="VisualizarFacturas">Contabilidad</a></li>
-                                    <li><a class="dropdown-item" href="#">Planificación</a></li>
                                     <li><a class="dropdown-item" href="#">Maquinaria</a></li>
                                 </ul>
                             </li>
-                        }                        
-                        
+                        }
+
                         @if (User.IsInRole("Administrador"))
                         {
                             <!-- Dropdown Módulos -->
@@ -56,21 +59,6 @@
                                     <li><a class="dropdown-item" asp-controller="Empleado" asp-action="VisualizarEmpleados">Recursos Humanos</a></li>
                                     <li><a class="dropdown-item" asp-controller="Inventario" asp-action="VisualizarInventario">Inventario</a></li>
                                     <li><a class="dropdown-item" asp-controller="Proveedores" asp-action="VisualizarProveedores">Proveedores</a></li>
-                                </ul>
-                            </li>                            
-                        }                        
-
-                        @if (User.IsInRole("Empleado"))
-                        {
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Módulo Empleado
-                                </a>
-
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Empleado 01</a></li>
-                                    <li><a class="dropdown-item" href="#">Empleado 02</a></li>
-                                    <li><a class="dropdown-item" href="#">Empleado 03</a></li>
                                 </ul>
                             </li>
                         }
@@ -99,8 +87,6 @@
                             </li>
                         }
 
-
-
                     </ul>
                     <!-- Dropdown del Perfil e Iniciar Sesión a la derecha -->
                     <ul class="navbar-nav mb-lg-0">
@@ -115,13 +101,10 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
                                     <li><a class="dropdown-item" asp-controller="Acceso" asp-action="VerPerfil">Ver Perfil</a></li>
-                                    <li><a class="dropdown-item" href="#">Configuración</a></li>
-                                    <li><a class="dropdown-item" asp-controller="Acceso" asp-action="ActivarTwoFA">Autenticación de 2 Factores</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Acceso" asp-action="ActivarTwoFA">Autenticación en 2 pasos</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" asp-controller="Acceso" asp-action="CerrarSesion">Cerrar sesión</a></li>
                                 </ul>
-                                <!-- Imagen de perfil circular -->
-                                <img src="https://dummyimage.com/40x40/343a40/ffffff&text=P" alt="Foto de perfil" class="rounded-circle me-2" style="width: 30px; height: 30px; object-fit: cover;">
                             </li>
                         }
                         else
