--- a/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/styles.css
+++ b/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/styles.css
@@ -65,49 +65,32 @@ footer {
     flex-grow: 1;
 }
 
-.btn-accionUno {
-    --clr-font-main: hsla(0 0% 20% / 100);
-    --btn-bg-1: hsla(194 100% 69% / 1);
-    --btn-bg-2: hsla(217 100% 56% / 1);
-    --btn-bg-color: hsla(360 100% 100% / 1);
-    --radii: 0.5em;
-    cursor: pointer;
-    padding: 0.9em 1.4em;
-    min-width: 120px;
-    min-height: 44px;
-    font-size: var(--size, 1rem);
-    font-weight: 500;
-    transition: 0.8s;
-    background-size: 280% auto;
-    background-image: linear-gradient( 325deg, var(--btn-bg-2) 0%, var(--btn-bg-1) 55%, var(--btn-bg-2) 90% );
+.btnRegistro {
+    font-size: 1.2rem;
+    padding: 1rem 2.5rem;
     border: none;
-    border-radius: var(--radii);
-    color: var(--btn-bg-color);
-    box-shadow: 0px 0px 20px rgba(71, 184, 255, 0.5), 0px 5px 5px -1px rgba(58, 125, 233, 0.25), inset 4px 4px 8px rgba(175, 230, 255, 0.5), inset -4px -4px 8px rgba(19, 95, 216, 0.35);
+    outline: none;
+    border-radius: 0.4rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    background-color: rgb(14, 14, 26);
+    color: rgb(234, 234, 234);
+    font-weight: 700;
+    transition: 0.6s;
+    box-shadow: 0px 0px 60px #1f4c65;
+    -webkit-box-reflect: below 10px linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4));
 }
 
-    .btn-accionUno:hover {
-        background-position: right top;
+    .btnRegistro:active,
+    .btnRegistro:active {
+        scale: 0.92;
     }
 
-    .btn-accionUno:is(:focus, :focus-visible, :active) {
-        outline: none;
-        box-shadow: 0 0 0 3px var(--btn-bg-color), 0 0 0 6px var(--btn-bg-2);
+    .btnRegistro:hover,
+    .btnRegistro:hover {
+        background: linear-gradient(270deg, rgba(2, 29, 78, 0.681) 0%, rgba(31, 215, 232, 0.873) 60%);
+        color: rgb(4, 4, 38);
     }
-
-@media (prefers-reduced-motion: reduce) {
-    .btn-accionUno {
-        transition: linear;
-    }
-}
-
-.profile-pic {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 2px solid #0056B3;
-}
 
 .input-group {
     position: relative;
@@ -148,4 +131,91 @@ footer {
 
 .modal-div-btn {
     text-align: center;
+}
+
+.card {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 500px;
+    padding: 36px;
+    border-radius: 24px;
+    overflow: hidden;
+    line-height: 1.6;
+    border: 1px solid #999999;
+    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    color: #000000;
+    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+    .content .heading {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.3;
+        z-index: 1;
+        transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+    }
+
+    .content .para {
+        z-index: 1;
+        opacity: 0.8;
+        font-size: 18px;
+        transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+    }
+
+.card::before {
+    content: "";
+    position: absolute;
+    right: -5.2rem;
+    top: -5.2rem;
+    width: 10.4rem;
+    height: 10.4rem;
+    background: #0a3cff;
+    z-index: 0;
+    opacity: 0;
+    border-radius: 50%;
+    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.card::after {
+    content: "";
+    position: absolute;
+    left: -5.2rem;
+    bottom: -5.2rem;
+    width: 10.4rem;
+    height: 10.4rem;
+    background: #0a3cff;
+    z-index: 0;
+    opacity: 0;
+    border-radius: 50%;
+    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.card:hover::before {
+    scale: 7;
+    opacity: 1;
+}
+
+.card:hover::after {
+    scale: 7;
+    opacity: 1;
+}
+
+.card:hover .content .heading,
+.card:hover .content .para {
+    color: #ffffff;
+}
+
+.card:hover {
+    box-shadow: 0rem 6px 13px rgba(0, 0, 0, 0.1), 0rem 24px 24px rgba(0, 0, 0, 0.09), 0rem 55px 33px rgba(0, 0, 0, 0.05), 0rem 97px 39px rgba(0, 0, 0, 0.01), 0rem 152px 43px rgba(0, 0, 0, 0);
+    border-color: #0a3cff;
+    scale: 1.05;
 }
