--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Facturas/VisualizarCierresMensuales.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Facturas/VisualizarCierresMensuales.cshtml
@@ -1,15 +1,15 @@
 ﻿@model IEnumerable<ProyectoSGIOCore.Models.CierreFinanciero>
 
 @{
-    ViewBag.Title = "Visualizar Cierres Financieros";
+    ViewBag.Title = "Cierres Financieros Mensuales";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Cierres Financieros Anuales</h2>
+    <h2 class="text-center mb-4">Cierres Financieros Mensuales</h2>
 
     <div class="text-end mb-3">
-        <a href="~/CierresFinancieros/RegistrarCierre" class="btn btn-secondary">Registrar Cierres Financieros</a>
+        <a href="~/CierresFinancieros/RegistrarCierreMensual" class="btn btn-secondary">Registrar Cierres Financieros</a>
     </div>
 
     <table class="table table-striped table-hover">
@@ -17,6 +17,7 @@
             <tr>
                 <th>ID</th>
                 <th>Año</th>
+                <th>Mes</th>
                 <th>Fecha Cierre</th>
                 <th>Total Ingresos</th>
                 <th>Total Egresos</th>
@@ -30,6 +31,7 @@
                 <tr>
                     <td>@cierre.IdCierre</td>
                     <td>@cierre.Anio</td>
+                    <td>@System.Globalization.CultureInfo.CurrentCulture.DateTimeFormat.GetMonthName(cierre.Mes)</td>
                     <td>@cierre.FechaCierre.ToShortDateString()</td>
                     <td>@cierre.TotalIngresos.ToString("C")</td>
                     <td>@cierre.TotalEgresos.ToString("C")</td>
